--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,6 +2,10 @@
   background-color: #ffffff;
 }
 
+.form label {
+  cursor: pointer;
+}
+
 @media (min-width: 1200px) {
   .form {
     padding: 0 110px;
@@ -201,7 +205,7 @@
 
 @media (min-width: 660px) {
   .form__block--data {
-    padding-top: 51px;
+    padding-top: 49px;
   }
 
   .form__block--data .form__input-block:last-child {
@@ -234,6 +238,135 @@
   padding-left: 20px;
   border: 2px solid #e5e5e5;
   border-radius: 1px;
+}
+
+.form__input:hover {
+  border-color: #283645;
+}
+
+.form__input:focus {
+  outline: 0;
+  border-color: #d22856;
+}
+
+.form__contacts-wrapper {
+  position: relative;
+}
+
+.form__contacts-wrapper::before,
+.form__contacts-wrapper::after {
+  @include tablet {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 65px;
+    background-color: #e5e5e5;
+    background-image: url("../../img/icon-phone.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    top: 0;
+    right: 0;
+  }
+
+  @include desktop {
+    right: 444px;
+  }
+}
+
+.form__contacts-wrapper::after {
+  @include tablet {
+    background-image: url("../../img/icon-mail.svg");
+    top: 133px;
+  }
+
+  @include desktop {
+    top: 0;
+    right: 0;
+  }
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"] + label::before {
+  content: "";
+  position: absolute;
+  width: 38px;
+  height: 38px;
+  left: 0;
+  top: -3px;
+  border: 2px solid #e5e5e5;
+  border-radius: 1px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
+
+input[type="checkbox"] + label:hover::before {
+  border-color: #283645;
+}
+
+input[type="checkbox"] + label:active::before {
+  border-color: #d22856;
+}
+
+input[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 38px;
+  height: 38px;
+  left: 0;
+  top: -3px;
+  border: 2px solid #e5e5e5;
+  border-radius: 1px;
+  box-sizing: border-box;
+  background-image: url("../../img/icon-yes.svg");
+  background-size: 22px 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #ffffff;
+}
+
+input[type="checkbox"]:checked + label:hover::after {
+  border-color: #283645;
+}
+
+input[type="checkbox"]:checked + label:active::after {
+  border-color: #d22856;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"] + label::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: -5px;
+  border: 2px solid #e5e5e5;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border-radius: 50%;
+  left: 0;
+}
+
+input[type="radio"]:checked + label::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: -5px;
+  border: 2px solid #e5e5e5;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border-radius: 50%;
+  left: 0;
+  background-image: url("../../img/icon-map-marker.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
 }
 
 @media (min-width: 660px) {
@@ -283,7 +416,7 @@
   margin-top: 16px;
   width: 280px;
   box-sizing: border-box;
-  padding-top: 15px;
+  padding-top: 13px;
 }
 
 .form__button {
@@ -299,6 +432,22 @@
   line-height: 30px;
   display: block;
   margin: 0 auto;
+  cursor: pointer;
+}
+
+.form__button--disabled {
+  background-color: #e5e5e5;
+  border: 2px solid #e5e5e5;
+  pointer-events: none;
+}
+
+.form__button:hover {
+  background-color: #1c9b5e;
+  border-color: #1c9b5e;
+}
+
+.form__button:active {
+  color: rgba(#ffffff, 0.3);
 }
 
 @media (min-width: 660px) {
@@ -312,6 +461,7 @@
     width: 496px;
     margin-top: 36px;
     height: 192px;
+    padding-left: 18px;
   }
 }
 
@@ -344,7 +494,7 @@
   }
 
   .form__block--apps {
-    padding-top: 30px;
+    padding-top: 33px;
   }
 
   .form__block--achievements {
@@ -365,10 +515,6 @@
     display: flex;
     flex-wrap: wrap;
   }
-
-  .form__achievements-item {
-    width: 33%;
-  }
 }
 
 @media (min-width: 1200px) {
@@ -378,18 +524,22 @@
 
   .form__achievements-item:nth-child(3) {
     order: 1;
+    margin-left: 58px;
   }
 
   .form__achievements-item:nth-child(4) {
     order: 4;
+    margin-left: 96px;
   }
 
   .form__achievements-item:nth-child(5) {
     order: 2;
+    margin-left: 57px;
   }
 
   .form__achievements-item:nth-child(6) {
     order: 5;
+    margin-left: 67px;
   }
 }
 
@@ -405,7 +555,7 @@
 @media (min-width: 660px) {
   .form__contacts {
     min-height: 318px;
-    padding-top: 36px;
+    padding-top: 34px;
     box-sizing: border-box;
   }
 
@@ -491,6 +641,7 @@
 
 .form__achievements-item {
   margin-bottom: 52px;
+  position: relative;
 }
 
 .form__achievements-item:last-child {
@@ -516,15 +667,16 @@
 
 .form__apps-item {
   margin-bottom: 45px;
+  position: relative;
 }
 
 .form__apps-label {
-  margin-left: 45px;
+  margin-left: 70px;
 }
 
 @media (min-width: 660px) {
   .form__apps-label {
-    margin-left: 35px;
+    margin-left: 59px;
   }
 }
 
@@ -539,7 +691,11 @@
 }
 
 .form__achievements-label {
-  margin-left: 35px;
+  margin-left: 59px;
+
+  @include tablet {
+    margin-left: 57px;
+  }
 }
 
 @media (min-width: 660px) {
