--- a/source/sass/blocks/download.scss
+++ b/source/sass/blocks/download.scss
@@ -30,11 +30,20 @@
   border: 3px solid #ffffff;
 }
 
+.download__button:hover {
+  color: #d22856;
+  background-color: #ffffff;
+}
+
+.download__button:active {
+  color: rgba(#d22856, 0.3);
+}
+
 @media (min-width: 660px) {
   .download__button {
     padding: 15px 45px;
-    margin-bottom: 45px;
-    margin-left: 15px;
+    margin-bottom: 44px;
+    margin-left: 20px;
   }
 }
 
@@ -86,8 +95,8 @@
   .download__description {
     font-size: 18px;
     min-width: 300px;
-    margin-top: 28px;
-    margin-left: 17px;
+    margin-top: 31px;
+    margin-left: 20px;
   }
 }
 
