--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,7 +5,7 @@
 }
 
 .features__title-block {
-  min-height: 170px;
+  min-height: 177px;
   background-color: #ffffff;
   padding-top: 42px;
 }
@@ -21,7 +21,7 @@
 @media (min-width: 1200px) {
   .features__title-block {
     padding-top: 60px;
-    min-height: 317px;
+    min-height: 323px;
   }
 }
 
@@ -62,17 +62,23 @@
 }
 
 .features__list-block {
+  background-image: url("../../img/bg-triangle-white.svg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: -1px;
+
   @include tablet {
     display: flex;
     min-height: 485px;
+    padding-top: 5px;
   }
 }
 
 .features__list {
   list-style: none;
-  background-color: #f2f2f2;
   margin: 0;
-  padding: 85px 20px 0 20px;
+  padding: 80px 20px 0 20px;
   margin-bottom: 40px;
 
   @include tablet {
@@ -80,17 +86,19 @@
     width: 50%;
     box-sizing: border-box;
     padding-left: 0;
-    padding-top: 77px;
+    padding-top: 70px;
     margin-bottom: 0;
+    margin-left: 42px;
   }
 }
 
 .features__item {
-  margin-bottom: 30px;
+  margin-bottom: 32px;
   text-align: center;
 
   @include tablet {
     text-align: left;
+    margin-bottom: 36px;
   }
 }
 
@@ -102,8 +110,13 @@
 
 .features__image {
   @include tablet {
-    width: 50%;
+    margin-left: 20px;
   }
+}
+
+.features__image picture:nth-child(1),
+.features__image picture:nth-child(2) {
+  display: none;
 }
 
 .features__image img {
@@ -118,16 +131,28 @@
     padding: 0 160px;
     width: 100%;
     justify-content: space-between;
-    padding-top: 43px;
+    padding-top: 55px;
+    margin-left: 0;
   }
 
   .features__list-block {
     flex-direction: column;
     min-height: 616px;
+    padding-top: 0;
   }
 
   .features__image {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 130px;
+    box-sizing: border-box;
+    margin-left: 0;
+  }
+
+  .features__image picture:nth-child(1),
+  .features__image picture:nth-child(2) {
+    display: block;
   }
 
   .features__image img {
@@ -145,7 +170,7 @@
   font-size: 18px;
   line-height: 24px;
   margin: 0;
-  margin-bottom: 14px;
+  margin-bottom: 11px;
 }
 
 @media (min-width: 1200px) {
