--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,19 +1,29 @@
 .intro {
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: center;
   padding-top: 20px;
   min-height: 396px;
   position: relative;
   box-sizing: border-box;
-  background-size: cover;
   display: flex;
+  background-size: cover;
   flex-direction: column;
+
+  @include retina {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 @media (min-width: 660px) {
   .intro {
     padding-top: 90px;
     min-height: 616px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+
+    @include retina {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 }
 
@@ -22,6 +32,11 @@
     padding-top: 210px;
     padding-left: 120px;
     min-height: 853px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @include retina {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
 
@@ -29,12 +44,16 @@
   display: block;
 }
 
-@media (min-width: 660px) {
-  .intro__image {
+.intro__image {
+  @include tablet {
     order: 2;
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: -20px;
+  }
+
+  @include desktop {
+    right: 4px;
   }
 }
 
