--- a/source/sass/mixin.scss
+++ b/source/sass/mixin.scss
@@ -5,6 +5,7 @@
   text-decoration: none;
   border-radius: 30px;
   padding: 15px 35px;
+  cursor: pointer;
 }
 
 @mixin tablet {
@@ -15,6 +16,12 @@
 
 @mixin desktop {
   @media (min-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin retina {
+  @media (min-resolution: 1.5dppx) {
     @content;
   }
 }
