Исправил пути к картинкам

--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -14,7 +14,7 @@
     width: 50%;
     box-sizing: border-box;
     padding: 54px 72px 10px 20px;
-    background-image: url("../../img/icon-editor-diagram-fill.svg"), url("../img/icon-timer.svg");
+    background-image: url("../img/icon-editor-diagram-fill.svg"), url("../img/icon-timer.svg");
     background-repeat: no-repeat;
     background-position: 39px 108px, 20px 51px;
     background-size: 199px 198px, 238px 276px;
@@ -77,7 +77,7 @@
   .effect__image {
     width: 500px;
     padding: 0;
-    background-image: url("../../img/icon-editor-diagram-fill.svg"), url("../img/icon-timer.svg");
+    background-image: url("../img/icon-editor-diagram-fill.svg"), url("../img/icon-timer.svg");
     background-position: 154px 81px, 129px 6px;
     background-size: 252px 252px, 305px 357px;
   }
