--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -62,7 +62,7 @@
 }
 
 .features__list-block {
-  background-image: url("../../img/bg-triangle-white.svg");
+  background-image: url("../img/bg-triangle-white.svg");
   background-position: top;
   background-repeat: no-repeat;
   background-size: 100%;
