--- a/source/sass/blocks/photos.scss
+++ b/source/sass/blocks/photos.scss
@@ -219,7 +219,7 @@
   position: absolute;
   width: 13px;
   height: 12px;
-  background-image: url("../../img/icon-heart.svg");
+  background-image: url("../img/icon-heart.svg");
   left: 17px;
   bottom: 24px;
   cursor: pointer;
