--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -17,7 +17,7 @@
 @media (min-width: 1200px) {
   .reviews {
     padding-top: 165px;
-    background-image: url("../../img/icon-quotes.svg");
+    background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
     background-position: center 71px;
     min-height: 410px;
