--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -261,7 +261,7 @@
     width: 60px;
     height: 65px;
     background-color: #e5e5e5;
-    background-image: url("../../img/icon-phone.svg");
+    background-image: url("../img/icon-phone.svg");
     background-position: center;
     background-repeat: no-repeat;
     top: 0;
@@ -275,7 +275,7 @@
 
 .form__contacts-wrapper::after {
   @include tablet {
-    background-image: url("../../img/icon-mail.svg");
+    background-image: url("../img/icon-mail.svg");
     top: 133px;
   }
 
@@ -320,7 +320,7 @@ input[type="checkbox"]:checked + label::after {
   border: 2px solid #e5e5e5;
   border-radius: 1px;
   box-sizing: border-box;
-  background-image: url("../../img/icon-yes.svg");
+  background-image: url("../img/icon-yes.svg");
   background-size: 22px 16px;
   background-repeat: no-repeat;
   background-position: center;
@@ -363,7 +363,7 @@ input[type="radio"]:checked + label::after {
   background-color: #ffffff;
   border-radius: 50%;
   left: 0;
-  background-image: url("../../img/icon-map-marker.svg");
+  background-image: url("../img/icon-map-marker.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
