--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -9,3 +9,159 @@ a {
 .visually-hidden {
   display: none;
 }
+
+:hover {
+  transition: 0.2s;
+}
+
+.icon-editor-crop {
+  width: 44px;
+  height: 44px;
+
+  @include tablet {
+    width: 22px;
+    height: 22px;
+    margin-left: 20px;
+  }
+
+  @include desktop {
+    width: 49px;
+    height: 49px;
+    margin-left: 41px;
+  }
+}
+
+.icon-editor-fill {
+  width: 51px;
+  height: 45px;
+  margin-left: 35px;
+  margin-top: 6px;
+
+  @include tablet {
+    width: 24px;
+    height: 22px;
+    margin-top: 54px;
+    margin-left: 18px;
+    fill: #d22856;
+  }
+
+  @include desktop {
+    width: 48px;
+    height: 48px;
+    margin-top: 22px;
+    margin-left: 45px;
+  }
+}
+
+.icon-editor-contrast {
+  width: 32px;
+  height: 32px;
+  margin-left: 33px;
+
+  @include tablet {
+    width: 16px;
+    height: 16px;
+    margin-top: 48px;
+    margin-left: 20px;
+    fill: #d22856;
+  }
+
+  @include desktop {
+    width: 32px;
+    height: 32px;
+    margin-top: 28px;
+    margin-left: 42px;
+  }
+}
+
+.logo-pink-white-tablet,
+.logo-pink-white-desktop {
+  display: none;
+}
+
+.logo-pink-white-mobile {
+  fill: #ffffff;
+}
+
+.logo-pink-white-mobile:hover {
+  fill: #d22856;
+}
+
+.logo-pink-white-mobile:active {
+  fill: #ffffff;
+  opacity: 0.3;
+}
+
+@media (min-width: 660px) {
+  .logo-pink-white-mobile,
+  .logo-pink-white-desktop {
+    display: none;
+  }
+
+  .logo-pink-white-tablet {
+    display: block;
+    fill: #ffffff;
+  }
+
+  .logo-pink-white-tablet:hover {
+    fill: #d22856;
+  }
+
+  .logo-pink-white-tablet:active {
+    fill: #ffffff;
+    opacity: 0.3;
+  }
+}
+
+@media (min-width: 1200px) {
+  .logo-pink-white-mobile,
+  .logo-pink-white-tablet {
+    display: none;
+  }
+
+  .logo-pink-white-desktop {
+    display: block;
+    fill: #ffffff;
+  }
+
+  .logo-pink-white-desktop:hover {
+    fill: #d22856;
+  }
+
+  .logo-pink-white-desktop:active {
+    fill: #ffffff;
+    opacity: 0.3;
+  }
+}
+
+.icon-review-arrow-left,
+.icon-review-arrow-right {
+  fill: rgba(#283645, 0.3);
+  display: none;
+  position: absolute;
+  cursor: pointer;
+
+  @include desktop {
+    display: block;
+  }
+}
+
+.icon-review-arrow-left:hover,
+.icon-review-arrow-right:hover {
+  fill: rgba(#283645, 0.6);
+}
+
+.icon-review-arrow-left:active,
+.icon-review-arrow-right:active {
+  fill: rgba(#283645, 0.1);
+}
+
+.icon-review-arrow-left {
+  left: 130px;
+  top: 212px;
+}
+
+.icon-review-arrow-right {
+  right: 130px;
+  top: 212px;
+}
