--- a/source/sass/blocks/editor.scss
+++ b/source/sass/blocks/editor.scss
@@ -10,6 +10,12 @@
 .editor__wrapper {
   background-color: #f2f2f2;
   padding: 20px 20px 33px 20px;
+  width: 320px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .editor__image {
@@ -132,6 +138,8 @@
     min-height: 511px;
     box-sizing: border-box;
     padding-top: 57px;
+    flex-direction: row;
+    width: 660px;
   }
 
   .editor__block {
@@ -229,66 +237,6 @@
   }
 }
 
-.icon-editor-crop {
-  width: 44px;
-  height: 44px;
-
-  @include tablet {
-    width: 22px;
-    height: 22px;
-    margin-left: 20px;
-  }
-
-  @include desktop {
-    width: 49px;
-    height: 49px;
-    margin-left: 41px;
-  }
-}
-
-.icon-editor-fill {
-  width: 51px;
-  height: 45px;
-  margin-left: 35px;
-  margin-top: 6px;
-
-  @include tablet {
-    width: 24px;
-    height: 22px;
-    margin-top: 54px;
-    margin-left: 18px;
-    fill: #d22856;
-  }
-
-  @include desktop {
-    width: 48px;
-    height: 48px;
-    margin-top: 22px;
-    margin-left: 45px;
-  }
-}
-
-.icon-editor-contrast {
-  width: 32px;
-  height: 32px;
-  margin-left: 33px;
-
-  @include tablet {
-    width: 16px;
-    height: 16px;
-    margin-top: 48px;
-    margin-left: 20px;
-    fill: #d22856;
-  }
-
-  @include desktop {
-    width: 32px;
-    height: 32px;
-    margin-top: 28px;
-    margin-left: 42px;
-  }
-}
-
 .editor__range {
   padding-top: 3px;
   position: relative;
@@ -304,7 +252,7 @@
   height: 1px;
   background-color: rgba(#283645, 0.1);
   position: absolute;
-  left: -20px;
+  left: -26px;
   top: 36px;
 
   @include tablet {
