--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,16 +7,16 @@
   grid-template-rows: min-content 1fr min-content;
 }
 
-.page__body-wrapper {
-  width: 320px;
-  margin: 0 auto;
-  position: relative;
+// .page__body-wrapper {
+//   width: 320px;
+//   margin: 0 auto;
+//   position: relative;
 
-  @include tablet {
-    width: 660px;
-  }
+//   @include tablet {
+//     width: 660px;
+//   }
 
-  @include desktop {
-    width: 1200px;
-  }
-}
+//   @include desktop {
+//     width: 1200px;
+//   }
+// }
